2025-06-04  k27007  <james@simula.no>

	* csrspmv.c: Fix a performancce regression in v1.8 (e78e060e0),
	where he measured performance decreased especially with many
	threads due to an additional OpenMP barrier that was added.  The
	issue is fixed by stopping the timer after the first barrier, thus
	only timing the SpMV kernel

2025-02-06  James D. Trotter  <james@simula.no>

	* csrspmv.c: place 'y' and 'rowptr' in sector 1 when using A64FX sector cache

2023-05-30  James D. Trotter  <james@simula.no>

	* add option for performing warmup iterations

2023-05-13  James D. Trotter  <james@simula.no>

	* Merge Sergej's code for controlling A64FX hardware prefetchers.

2023-05-06  James D. Trotter  <james@simula.no>

	* csrspmv.c, ellspmv.c: add option for sorting nonzeros within
	each row by column

2023-05-04  James D. Trotter  <james@simula.no>

	* Merge fix from Sergej to enable A64FX sector cache before the
	loop that repeatedly performs SpMV.

2023-04-01  James D. Trotter  <james@simula.no>

	* csrspmv.c (csr_from_coo): fix bug in converting symmetric
	matrices to CSR

2023-03-31  James D. Trotter  <james@simula.no>

	* csrspmv.c: add an option for explicitly specifying the number of
	rows per thread

2023-03-17  James D. Trotter  <james@simula.no>

	* csrspmv.c: allow symmetric matrices by adding two nonzeros to
	the CSR representation for every off-diagonal nonzero

	* csrspmv.c: add an option for precomputing first and final rows
	for each thread for the load-balanced SpMV kernel (csrgemvnz)

2023-03-14  James D. Trotter  <james@simula.no>

	* csrspmv.c: add a missing barrier for the CSR SpMV with balanced
	nonzeros (csrgemvnz) to ensure that the execution time and
	performance is accurately displayed.

2023-03-08  James D. Trotter  <james@simula.no>

	* csrspmv.c, ellspmv.c: use _OPENMP instead of WITH_OPENMP to
	check for OpenMP support.

2023-03-02  James D. Trotter  <james@simula.no>

	add compile-time options for selecting 32- or 64-bit integers for